2011-06-21  Mike Frysinger  <vapier@gentoo.org>

	* bfin/syscalls.c: Trim trailing whitespace.
	* bfin/crt0.S: Likewise.

2011-06-14  Joseph Myers  <joseph@codesourcery.com>

	* configure.in: Don't handle strongarm, ep9312 and xscale target
	names.
	* configure: Regenerate.
	* libnosys/configure.in: Don't handle strongarm and thumb target
	names.
	* libnosys/configure: Regenerate.

2011-05-27  Nick Clifton  <nickc@redhat.com>

	* v8500/sbrk.c (_sbrk): Tidy code.
	Base start of heap on the "heap_start" symbol.

2011-03-26  Mike Frysinger  <vapier@gentoo.org>

	* bfin/include/builtins.h (__builtin_raise): Change constraint to n.
	(__builtin_excpt): Likewise.

2011-03-26  Mike Frysinger  <vapier@gentoo.org>

	* bfin/Makefile.in (install-sim): Exit when install fails.
	(install-board): Likewise.

2011-03-24  Nick Clifton  <nickc@redhat.com>

	* xstormy16/crt0.s (_hwint): Fix .size directive.

	* frv/crt0.S (__frv_fix_usrptrs): Fix .size directive.

2011-03-21  Kevin Buettner  <kevinb@redhat.com>

	* v850/sys/syscall.h (SYS_rename): Define.

2011-01-10  Mike Frysinger  <vapier@gentoo.org>

	* Makefile.in (stmp-bsp): Exit when subdirs fail.
	(install): Likewise.

2010-12-02  Jayant Sonar  jayant.sonar@kpitcummins.com
	    Kaushik Phatak  kaushik.phatak@kpitcummins.com

	* configure.in: Add CR16 support.
	* configure: Regenerated.
	* cr16/aclocal.m4: New.
	* cr16/close.c: New.
	* cr16/configure: New.
	* cr16/configure.in: New.
	* cr16/crt1.S: New.
	* cr16/crti.S: New.
	* cr16/crtn.S: New.
	* cr16/dvz_hndl.c: New.
	* cr16/_exit.c: New.
	* cr16/flg_hndl.c: New.
	* cr16/fstat.c: New.
	* cr16/_getenv.c: New.
	* cr16/getpid.c: New.
	* cr16/iad_hndl.c: New.
	* cr16/intable.c: New.
	* cr16/isatty.c: New.
	* cr16/kill.c: New.
	* cr16/lseek.c: New.
	* cr16/Makefile.in: New.
	* cr16/open.c: New.
	* cr16/putnum.c: New.
	* cr16/read.c: New.
	* cr16/_rename.c: New.
	* cr16/sbrk.c: New.
	* cr16/sim.ld: New.
	* cr16/stat.c: New.
	* cr16/svc_hndl.c: New.
	* cr16/time.c: New.